--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
       <div class="container-skills">
         <h1><span>My </span>Skills</h1>
         <div class="content-skills">
+          <div class="skill"><img src="./images/javascript.png" alt="javascript" /></div>
           <div class="skill"><img src="./images/html.png" alt="html" /></div>
           <div class="skill"><img src="./images/css.png" alt="css" /></div>
           <div class="skill"><img src="./images/react.png" alt="react" /></div>
