--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <h4>Hello, my name is</h4>
           <h1>Digvijay<span> Upadhyay</span></h1>
           <h3>I am a <span>Full Stack</span> developer</h3>
-          <a href="./icons/Digvijaya's Resume.pdf" download class="btn">Download CV</a>
+          <a href="./icons/Digvijaya Resume.pdf" download class="btn">Download CV</a>
 
           <div class="social">
             <a href="https://www.facebook.com/digvijay.upadhyay.50"
@@ -97,7 +97,7 @@
         <div class="project-div">
           <h3 class="h3">Video Sharing App</h3>
           <a
-            href="https://video-stream-frontend.onrender.com"
+            href="https://video-stream-frontend.netlify.app/"
             target="_blank"
             rel="noreferrer"
             ><img src="./images/video.jpg" alt="vid"
@@ -128,6 +128,15 @@
             target="_blank"
             rel="noreferrer"
             ><img src="./images/insta.jpg" alt="insta"
+          /></a>
+        </div>
+         <div class="project-div">
+          <h3 class="h3">Book Library</h3>
+          <a
+            href="https://flutrrbook.netlify.app/"
+            target="_blank"
+            rel="noreferrer"
+            ><img src="./images/sc2.png" alt="insta"
           /></a>
         </div>
       </div>
